--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: php
 
 php:
-  - 5.3
   - 5.4
   - 5.5
   - 5.6
@@ -11,21 +10,8 @@ php:
 
 matrix:
   fast_finish: true
-  allow_failures:
-    - php: '7.1.0alpha1'
-    - php: hhvm
-  include:
-    - php: 5.6
-      env: XDEBUG_OFF="yes"
-    - php: 7.0
-      env: XDEBUG_OFF="yes"
 
 script:
-  - sh -c 'if [ "$TRAVIS_PHP_VERSION" != "5.3" ]; then
-        composer require guzzlehttp/guzzle --no-update;
-    fi;'
-  - make
-  - make test-all
-
-after_script:
- - make coveralls
+  - php -S localhost:8888 ./web-root/ &
+  - curl -S http://localhost:8888
+  - exit 1
