--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,14 @@ php:
 matrix:
   fast_finish: true
 
+include:
+  - php: 7.0
+    env: XDEBUG_OFF="yes"
+
+before_script:
+  - if [[ $XDEBUG_OFF = yes ]]; then phpenv config-rm xdebug.ini; fi;
+
 script:
-  - phpenv config-rm xdebug.ini
   - composer update
   - make server
   - make curl
